# swagger.json
@@ -11,11 +11,31 @@
     "http",
     "https"
   ],
-  "paths": {    
-    "/users/": {
+  "paths": {
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/user/": {
       "get": {
         "tags": [
-          "users"
+          "Users"
         ],
         "description": "",
         "produces": [
@@ -32,7 +52,7 @@
       },
       "post": {
         "tags": [
-          "users"
+          "Users"
         ],
         "description": "",
         "parameters": [
@@ -42,19 +62,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
                 "email": {
                   "example": "any"
                 },
-                "password": {
+                "fullName": {
                   "example": "any"
                 },
-                "birthday": {
+                "birthDate": {
+                  "example": "any"
+                },
+                "address": {
+                  "example": "any"
+                },
+                "biography": {
                   "example": "any"
                 }
               }
@@ -71,10 +91,10 @@
         }
       }
     },
-    "/users/{id}": {
+    "/user/{id}": {
       "get": {
         "tags": [
-          "users"
+          "Users"
         ],
         "description": "",
         "produces": [
@@ -102,7 +122,7 @@
       },
       "put": {
         "tags": [
-          "users"
+          "Users"
         ],
         "description": "",
         "parameters": [
@@ -127,7 +147,7 @@
       },
       "delete": {
         "tags": [
-          "users"
+          "Users"
         ],
         "description": "",
         "parameters": [
@@ -154,7 +174,7 @@
     "/author/": {
       "get": {
         "tags": [
-          "users"
+          "Author"
         ],
         "description": "",
         "produces": [
@@ -171,7 +191,7 @@
       },
       "post": {
         "tags": [
-          "users"
+          "Author"
         ],
         "description": "",
         "parameters": [
@@ -181,7 +201,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "email": {
+                "userId": {
+                  "example": "any"
+                },
+                "booksPublished": {
                   "example": "any"
                 }
               }
@@ -201,7 +224,7 @@
     "/author/{id}": {
       "get": {
         "tags": [
-          "users"
+          "Author"
         ],
         "description": "",
         "produces": [
@@ -232,7 +255,7 @@
       },
       "put": {
         "tags": [
-          "authors"
+          "Author"
         ],
         "description": "",
         "parameters": [
@@ -248,7 +271,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "email": {
+                "booksPublished": {
                   "example": "any"
                 }
               }
@@ -272,7 +295,7 @@
       },
       "delete": {
         "tags": [
-          "authors"
+          "Author"
         ],
         "description": "",
         "parameters": [
@@ -301,6 +324,9 @@
     },
     "/book/": {
       "get": {
+        "tags": [
+          "Book"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -316,7 +342,7 @@
       },
       "post": {
         "tags": [
-          "books"
+          "Book"
         ],
         "description": "",
         "parameters": [
@@ -332,7 +358,7 @@
                 "authorId": {
                   "example": "any"
                 },
-                "genre": {
+                "genreId": {
                   "example": "any"
                 },
                 "publicationYear": {
@@ -361,7 +387,7 @@
     "/book/{id}": {
       "get": {
         "tags": [
-          "books"
+          "Book"
         ],
         "description": "",
         "parameters": [
@@ -389,7 +415,7 @@
       },
       "put": {
         "tags": [
-          "books"
+          "Book"
         ],
         "description": "",
         "parameters": [
@@ -411,7 +437,7 @@
                 "authorId": {
                   "example": "any"
                 },
-                "genre": {
+                "genreId": {
                   "example": "any"
                 },
                 "publicationYear": {
@@ -441,7 +467,7 @@
       },
       "delete": {
         "tags": [
-          "books"
+          "Book"
         ],
         "description": "",
         "parameters": [
@@ -469,9 +495,26 @@
       }
     },
     "/genre/": {
+      "get": {
+        "tags": [
+          "Genre"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
       "post": {
         "tags": [
-          "genres"
+          "Genre"
         ],
         "description": "",
         "parameters": [
@@ -507,7 +550,7 @@
     "/genre/{id}": {
       "get": {
         "tags": [
-          "genres"
+          "Genre"
         ],
         "description": "",
         "parameters": [
@@ -535,7 +578,7 @@
       },
       "put": {
         "tags": [
-          "genres"
+          "Genre"
         ],
         "description": "",
         "parameters": [
@@ -578,7 +621,7 @@
       },
       "delete": {
         "tags": [
-          "genres"
+          "Genre"
         ],
         "description": "",
         "parameters": [
@@ -604,6 +647,16 @@
           }
         }
       }
-    }    
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    }
   }
 }
